Migrate source code to JDK11 (#572)
* #570 JDK11 migration

* #571 generate invoice number only when the payment gateway replies with a successful status

* #570 update README and configuration files for deployment (to be tested)

* #570 try to fix azure pipeline

* #570 back to a more conservative approach: enable "skip locked" only where strictly required

* #570 fix test

* #570 better handling of exceptional result